--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,53 +1,71 @@
-/* Reset Global*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    scroll-behavior: smooth;
-    font-family: "Preahvihear", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  font-family: "Roboto", sans-serif;
 }
 
 .cardo-regular {
-    font-family: "Cardo", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .cardo-bold {
-    font-family: "Cardo", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
+  font-family: "Cardo", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.cardo-bold {
+  font-family: "Cardo", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 .preahvihear-regular {
   font-family: "Preahvihear", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-body{
-    background-color: var(--corFundo);
-    color: var(--corBranco);
+
+
+
+
+body {
+  background: linear-gradient(to bottom, #F9F5F0, #FCE9E2);
+  color: var(--corPreta);
+  /* Aplica a cor preta ao texto */
 }
+
+
+
+
 
 /* Declaração de Padding em Todas as Secções */
-section, footer{
-    padding: 0px 15%;
+section,
+footer {
+  padding: 0px 15%;
 }
 
-:root{
-    /* Declaração das Variáveis de Tamanho de Fonte */
-    --fonteTitulo: 50px;
-    --fonteSubtitulo: 35px;
-    --fonteParagrafo: 20px;
-    --fonteDetalhes: 14px;
+:root {
+  /* Declaração das Variáveis de Tamanho de Fonte */
+  --fonteTitulo: 50px;
+  --fonteSubtitulo: 35px;
+  --fonteParagrafo: 20px;
+  --fonteDetalhes: 14px;
 
-    /* Declaração de Variáveis de Cores */
-    --corFundo: #11071F;
-    --corBranco: #FFFFFF;
-    --roxoClaro: #693b93;
-    --roxoMedio: #261250;
-    --roxoEscuro: #1A082E;
+  /* Declaração de Variáveis de Cores */
+  --corFundo: #F9E3E3;
+  --corBranco: #FFFFFF;
+  /* Corrigido o código para branco padrão */
+  --roxoEscuro: #4A1F3B;
+  --roxoClaro: #6D3F4F;
+
+  /* Cores adicionais ajustadas */
+  --rosaClaro: #F76C6C;
+  /* Rosa claro */
+  --corLilas: #A593E0;
+  /* Lilás médio */
+  --corPreta: #000000;
+  /* Preto */
 }
