--- a/main.css
+++ b/main.css
@@ -1,11 +1,17 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Preahvihear&display=swap');
-@import url(./assets/styles/global.css); /* Carrega o Global.css*/
-@import url(./assets/styles/navegacao.css); /* Carrega o Navegacao.css*/
-@import url(./assets/styles/inicio.css); /* Carrega o Inicio.css*/
-@import url(./assets/styles/experiencias.css);/* Carrega o Experiencias.css*/
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url(./assets/styles/global.css);
+@import url(./assets/styles/navegacao.css);
+@import url(./assets/styles/inicio.css);
+@import url(./assets/styles/experiencias.css);
 @import url(./assets/styles/habilidades.css);
 @import url(./assets/styles/projetos.css);
 @import url(./assets/styles/contato.css);
 @import url(./assets/styles/rodape.css);
+@import url(./assets/styles/mediaquery.css);
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url(./assets/styles/paralax.css);
+@import url(./assets/javascript/scripts.js);
 
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
